@@ -1,3 +1,9 @@
+Fri Jun 09 2006  Cedric Pinson  <cpinson@freesheep.org>
+
+	* pokernetwork/pokerpackets.py:
+	* pokerui/pokerrenderer.py:
+	Add packet and function to disable animation in first person
+
 Wed Jun 07 2006  Johan Euphrosine  <johan@mekensleep.org>
 
 	* pokerui/pokerrenderer.py: added amount member to POKER_PACKET_CALL when rendered to game
